# Adk_agent_samples

confluence_search_agent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  server.py
confluence_search_agent/confluence/: __init__.py  agent.py  config.py  prompt.py
confluence_search_agent/confluence/tools/: __init__.py  confluence_mcp.py  mcp_client.py
personalized_shopping_agent/: Dockerfile  README.md  README_A2A.md  pyproject.toml  server.py
personalized_shopping_agent/personalized_shopping/: __init__.py  agent.py  config.py
personalized_shopping_agent/personalized_shopping/tools/: click.py  search.py
